--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
       <div class="content">
         <h1>Login</h1>
         <hr />
-        <form action="index.html" method="post" id="login_form">
+        <form action="#" method="post" id="login_form">
           <div class="input-box">
             <input
               type="text"
